builder/tests/08-unrecognized-attribute.stderr
error: unrecognized builder attribute `eac`
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
